--- a/assignment/package.json
+++ b/assignment/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
     "react-animation-components": "^3.0.0",
     "react-bootstrap": "^1.3.0",
     "react-css-transition": "^0.7.4",
